apps/prod/public/xui/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-web
  namespace: xui
  labels:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
  ports:
    - name: web
      protocol: TCP
      port: 7700
    - name: web-sub
      protocol: TCP
      port: 7560
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: xui
  labels:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
  ports:
    - name: vless-1
      protocol: TCP
      port: 7554
    - name: vless-2
      protocol: TCP
      port: 7555
    - name: vless-3
      protocol: TCP
      port: 7556
  type: ClusterIP


---

apiVersion: v1
kind: Service
metadata:
  name: app-udp
  namespace: xui
  labels:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: xui
    app.kubernetes.io/component: app
  ports:
    - name: udp
      protocol: UDP
      port: 8443
      targetPort: 7557
  loadBalancerIP: 192.168.200.15
  type: LoadBalancer
