apps/prod/public/xui/ingress-app.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: xui
spec:
  headers:
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 63072000
    customResponseHeaders:
      server: ""
    frameDeny: true
    customFrameOptionsValue: "SAMEORIGIN"
    contentTypeNosniff: true
    referrerPolicy: "strict-origin-when-cross-origin"
    permissionsPolicy: "camera=(), microphone=(), geolocation=()"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-web-plain
  namespace: xui
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`xui.hyvel.eu`) || Host(`xsu.hyvel.eu`) || Host(`xp.hyvel.eu`)
      middlewares:
        - name: traefik-https-redirect
          namespace: traefik
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-web
  namespace: xui
spec:
  tls:
    secretName: wildcard-hyvel-certificate-secret
    domains:
      - main: xui.hyvel.eu
  entryPoints:
    - websecure
  routes:
    - match: Host(`xui.hyvel.eu`) && PathPrefix(`/admin`)
      middlewares:
        - name: anubis
          namespace: traefik
        - name: security-headers
          namespace: xui
        - name: compress
          namespace: traefik
      kind: Rule
      services:
        - kind: Service
          name: app
          port: 7700
          scheme: https
          serversTransport: xui-transport
    - match: Host(`xui.hyvel.eu`) && (PathPrefix(`/am75xinif2xqk5zn8fcm`) || PathPrefix(`/qgr47w9s9ec4f7hgr2oy`))
      middlewares:
        - name: security-headers
          namespace: xui
        - name: compress
          namespace: traefik
      kind: Rule
      services:
        - kind: Service
          name: app
          port: 7560
          scheme: https
          serversTransport: xui-transport

---

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-passthrough
  namespace: xui
spec:
  tls:
    passthrough: true
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`www.dzingel.ee`)
      services:
        - name: app
          port: 7554
    - match: HostSNI(`xp.hyvel.eu`)
      services:
        - name: app
          port: 7555
    - match: HostSNI(`xsu.hyvel.eu`)
      services:
        - name: app
          port: 7556
