apps/prod/public/xui/route-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-plain
  namespace: xui
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: http
  hostnames:
    - "xui.hyvel.eu"
    - "xr.io.hyvel.eu"
    - "xsu.io.hyvel.eu"
    - "xp.io.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: xui
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: https-hyvel
  hostnames:
    - "xui.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /admin
      backendRefs:
        - name: app-web
          port: 7700
    - matches:
      - path:
          type: PathPrefix
          value: /am75xinif2xqk5zn8fcm
      - path:
          type: PathPrefix
          value: /qgr47w9s9ec4f7hgr2oy
      backendRefs:
        - name: app-web
          port: 7560

---

apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: app-vless-1
  namespace: xui
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: tls-mimic-1
  hostnames:
    - "www.peatus.ee"
  rules:
    - backendRefs:
      - name: app
        port: 7554

---

apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: app-vless-2
  namespace: xui
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: tls-io-hyvel
  hostnames:
    - "xp.io.hyvel.eu"
  rules:
    - backendRefs:
      - name: app
        port: 7555

---

apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: app-vless-3
  namespace: xui
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: tls-io-hyvel
  hostnames:
    - "xsu.io.hyvel.eu"
  rules:
    - backendRefs:
      - name: app
        port: 7556
